<resources>
    <string name="app_name">Blood Care</string>
    <string name="blood_care">Blood Care</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="contact_no">Contact No</string>
    <string name="city">City</string>
    <string name="gender">Gender</string>
    <string name="search_don">Search Donaters</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="update">Update</string>
</resources>